--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <img src= '/imgs/Logo.png' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
-<a href='basquete/index.html'>Basquete</a>
-<a href='outro02/index.html'>Futebol</a>
+<a href ='outro01/index.html'>Tênis</a>
+<a href ='outro02/index.html'>Futebol</a>
+<a href = 'basquete/index.html'>Basquete</a>
+
+<img src = ''
+
 </body>
 
 </html>
