--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -1,1 +1,20 @@
-<img src= '/imgs/Logo.png' alt= "Logo da loja"/>
+<!DOCTYPE html>
+<html lang=" "pt-BR">
+
+<head>
+
+</head>
+
+<body>
+
+<img src= '/imgs/Logo.png' alt= "Erro ao carregar a Logo da loja"/>
+<h1>Esportes do Boti</h1>
+<h5>Menu</h5>
+<a href='outro01/index.html'>Tênis</a>
+<a href='outro02/index.html'>Futebol</a>
+</body>
+
+</html>
+
+
+
