--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href ='outro02/index.html'>Futebol</a>
 <a href = 'basquete/index.html'>Basquete</a>
 
-<img src = ''
+<img src = '/imgs/bolaBasquete.png' alt = "Erro ao carregar a imagem representativa do basquete"/>
 
 </body>
 
