--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <a href ='outro02/index.html'>Futebol</a>
 <a href = 'basquete/index.html'>Basquete</a>
 
-<img src = '/imgs/bolaBasquete.png' alt = "Erro ao carregar a imagem representativa do basquete"/>
+<a href = 'basquete/index.html'><img src = '/imgs/bolaBasquete.png' alt = "Imagem representativa do basquete"/></a>
 
 </body>
 
