--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 <a href = 'basquete/index.html'>Basquete</a>
 
 <a href = 'basquete/index.html'><img src = '/imgs/bolaBasquete.png' alt="Imagem de basquete"/></a>
+<a href = 'outro01/index.html'><img src = '/imgs/bolaTenis.jpeg' alt="Imagem de tênis"/></a>
+<a href = 'outro02/index.html'><img src = '/imgs/bolaFutebol.jpg' alt="Imagem de futebol"/></a>
 
 </body>
 
