--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 <a href = 'outro01/index.html'><img src = '/imgs/bolaTenis.jpeg' alt="Imagem de tênis"/></a>
 <a href = 'outro02/index.html'><img src = '/imgs/bolaFutebol.jpg' alt="Imagem de futebol"/></a>
 
+<h4>
+    Descrição de produtos:
+</h4>
+<p>
+    A Esportes do Boti é uma loja online especializada em produtos esportivos de alta qualidade, 
+    voltada para todos os apaixonados por esporte, especialmente basquete, tênis de mesa e  futebol
+    — do iniciante ao profissional. Trabalhamos com uma ampla variedade de itens para diferentes modalidades, garantindo praticidade, 
+    conforto e performance.
+</p>
+
 </body>
 
 </html>
