--- a/esporte/outro02/index.html
+++ b/esporte/outro02/index.html
@@ -10,8 +10,8 @@
 <img src= '/imgs/Logo.png' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
-<a href='basquete/index.html'>Basquete</a>
-<a href='outro01/index.html'>Tênis</a>
+<a href='/esporte/basquete/index.html'>Basquete</a>
+<a href='/esporte/outro01/index.html'>Tênis</a>
 </body>
 
 </html>
