--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <img src= '/imgs/Logo.png' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
-<a href ='outro01/index.html'>Tênis</a>
-<a href ='outro02/index.html'>Futebol</a>
-<a href = 'basquete/index.html'>Basquete</a>
+<a href ='/esporte/outro01/index.html'>Tênis</a>
+<a href ='/esporte/outro02/index.html'>Futebol</a>
+<a href = '/esporte/basquete/index.html'>Basquete</a>
 
 <a href = '/esporte/basquete/index.html'><img src = '/imgs/bolaBasquete.png' alt="Imagem de basquete"/></a>
 <a href = '/esporte/outro01/index.html'><img src = '/imgs/bolaTenis.jpeg' alt="Imagem de tênis"/></a>
