--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -7,7 +7,7 @@
 
 <body>
 
-<img src= '/imgs/Logo.png' alt= "Erro ao carregar a Logo da loja"/>
+<img src= '/imgs/Logo.jfif' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
 <a href='/esporte/outro01/index.html'>Tênis</a>
