--- a/index.html
+++ b/index.html
@@ -7,26 +7,37 @@
 
 <body>
 
-<img src= '/imgs/Logo.png' alt= "Erro ao carregar a Logo da loja"/>
+<img src= '/imgs/Logo.jfif' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
 <a href ='/esporte/outro01/index.html'>Tênis</a>
 <a href ='/esporte/outro02/index.html'>Futebol</a>
 <a href = '/esporte/basquete/index.html'>Basquete</a>
 
-<a href = '/esporte/basquete/index.html'><img src = '/imgs/bolaBasquete.png' alt="Imagem de basquete"/></a>
-<a href = '/esporte/outro01/index.html'><img src = '/imgs/bolaTenis.jpeg' alt="Imagem de tênis"/></a>
-<a href = '/esporte/outro02/index.html'><img src = '/imgs/bolaFutebol.jpg' alt="Imagem de futebol"/></a>
+<a href = '/esporte/basquete/index.html'><img src = '/imgs/bolaBasquete.jfif' alt="Imagem de basquete"/></a>
+<a href = '/esporte/outro01/index.html'><img src = '/imgs/bolaTenis.jfif' alt="Imagem de tênis"/></a>
+<a href = '/esporte/outro02/index.html'><img src = '/imgs/bolaFutebol.jfif' alt="Imagem de futebol"/></a>
+
+
+IMAGEM ILUSTRRATIVA DA LOJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
 
 <h4>
     Descrição de produtos:
 </h4>
 <p>
     A Esportes do Boti é uma loja especializada em produtos esportivos de alta qualidade, 
-    voltada para todos os apaixonados por esporte, especialmente basquete, tênis de mesa e  futebol
+    voltada para todos os apaixonados por esporte, especialmente basquete, tênis e futebol
     — do iniciante ao profissional. Trabalhamos com uma ampla variedade de itens para diferentes modalidades, garantindo praticidade, 
     conforto e performance.
 </p>
+
+<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d479.00157990530056!2d-42.29903386576189!3d-16.168298538593017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749583132066!5m2!1spt-BR!2sbr" 
+width="600" 
+height="450" 
+style="border: 2px black;" 
+allowfullscreen="" 
+loading="lazy" 
+referrerpolicy="no-referrer-when-downgrade"></iframe>
 
 </body>
 
