--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ IMAGEM ILUSTRRATIVA DA LOJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
     A Esportes do Boti é uma loja especializada em produtos esportivos de alta qualidade, 
     voltada para todos os apaixonados por esporte, especialmente basquete, tênis e futebol
     — do iniciante ao profissional. Trabalhamos com uma ampla variedade de itens para diferentes modalidades, garantindo praticidade, 
-    conforto e performance.
+    conforto e performafnce.
 </p>
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d479.00157990530056!2d-42.29903386576189!3d-16.168298538593017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749583132066!5m2!1spt-BR!2sbr" 
