--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
 <a href = '/esporte/outro02/index.html'><img src = '/imgs/bolaFutebol.jfif' alt="Imagem de futebol"/></a>
 
 
-IMAGEM ILUSTRRATIVA DA LOJAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+<h4>
+    Conheça nossa loja física:
+</h4>
+<img src = '/imgs/fachadaLoja.jfif' alt="Erro ao carregar imagem da loja"/>
 
 <h4>
     Descrição de produtos:
