--- a/index.html
+++ b/index.html
@@ -25,8 +25,18 @@
     A Esportes do Boti é uma loja especializada em produtos esportivos de alta qualidade, 
     voltada para todos os apaixonados por esporte, especialmente basquete, tênis e futebol
     — do iniciante ao profissional. Trabalhamos com uma ampla variedade de itens para diferentes modalidades, garantindo praticidade, 
-    conforto e performafnce.
+    conforto e performance.
 </p>
+
+<h4>
+    Formas de pagamento aceitas:
+</h4>
+<ul>
+    <li>Dinheiro</li>
+    <li>Cartões de crédito e débito: Visa, Mastercard, Elo, Hipercard e American Express</li>
+    <li>Pix</li>
+    <li>Boleto</li>
+</ul>
 
 
 <h4>
