--- a/index.html
+++ b/index.html
@@ -54,6 +54,13 @@ allowfullscreen=""
 loading="lazy" 
 referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+<h4>
+    Proprietários:
+</h4>
+<p>
+    Pedro Luiz Lopes Pereira <br> Hávilla Lopes Pereira <br> Ágatha Pereira dos Santos
+</p>
+
 </body>
 
 </html>
