--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -12,6 +12,36 @@
 <h5>Menu</h5>
 <a href='/esporte/outro01/index.html'>Tênis</a>
 <a href='/esporte/outro02/index.html'>Futebol</a>
+
+<h3>
+    Nossos produtos:
+</h3>
+
+<h4>
+    Bola de Basquete "Street Hoops Elite"
+</h4>
+<img src = '/imgs/bolaBasqueteProduto.jfif' alt = "Erro ao carregar bola de basquete"/>
+<h6>
+    Preço:
+</h6>
+<p>
+    R$149,90
+</p>
+<h6>
+    Descrição:
+</h6>
+<p>
+    Bola de basquete com excelente aderência e durabilidade, perfeita para jogos em quadras
+     internas e externas. Sua superfície proporciona controle superior no drible e no arremesso.
+</p>
+<h6>
+    Tamanhos disponíveis:
+</h6>
+<p>
+    Tamanho 7 (padrão masculino), Tamanho 6 (padrão feminino/juvenil)
+</p>
+
+
 </body>
 
 </html>
