--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -13,34 +13,81 @@
 <a href='/esporte/outro01/index.html'>Tênis</a>
 <a href='/esporte/outro02/index.html'>Futebol</a>
 
-<h3>
+<h2>
     Nossos produtos:
-</h3>
+</h2>
 
-<h4>
+<h3>
     Bola de Basquete "Street Hoops Elite"
-</h4>
+</h3>
 <img src = '/imgs/bolaBasqueteProduto.jfif' alt = "Erro ao carregar bola de basquete"/>
-<h5>
+<h4>
     Preço:
-</h5>
+</h4>
 <p>
     R$149,90
 </p>
-<h5>
+<h4>
     Descrição:
-</h5>
+</h4>
 <p>
     Bola de basquete com excelente aderência e durabilidade, perfeita para jogos em quadras
      internas e externas. Sua superfície proporciona controle superior no drible e no arremesso.
 </p>
-<h5>
+<h4>
     Tamanhos disponíveis:
-</h5>
+</h4>
 <p>
     Tamanho 7 (padrão masculino), Tamanho 6 (padrão feminino/juvenil)
 </p>
 
+<h3>
+    Tênis de Basquete "Jump Force"
+</h3>
+<img src = '/imgs/tenisBasquete.jfif' alt = "Erro ao carregar tênis de basquete"/>
+<h4>
+    Preço:
+</h4>
+<p>
+    R$499,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Tênis de basquete com amortecimento responsivo e suporte para tornozelo, ideal para saltos
+     e movimentos rápidos. A sola oferece tração multidirecional para cortes precisos.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    38 ao 45
+</p>
+
+<h3>
+    Camiseta de Basquete "Slam Dunk Performance"
+</h3>
+<img src = '/imgs/camisaBasquete.jfif' alt = "Erro ao exibir camiseta de basquete"/>
+<h4>
+    Preço:
+</h4>
+<p>
+    R$119,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Camiseta de basquete em tecido respirável que absorve o suor, mantendo você seco e 
+    confortável durante o jogo. Design moderno e caimento atlético.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    P, M, G, GG
+</p>
 
 </body>
 
