--- a/esporte/outro01/index.html
+++ b/esporte/outro01/index.html
@@ -12,6 +12,44 @@
 <h5>Menu</h5>
 <a href='/esporte/basquete/index.html'>Basquete</a>
 <a href='/esporte/outro02/index.html'>Futebol</a>
+
+<h2>
+    Nossos produtos
+</h2>
+<h3>
+    Bola de Tênis "Grand Slam Core"
+</h3>
+<img = src = '/imgs/bolaTenisProduto.jfif' alt = "Erro ao exibir a bola de tênis"
+<h4>
+    Preço:
+</h4>
+<p>
+    R$29,90 (pacote com 3)
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Bolas de tênis de alta qualidade, com excelente quique e durabilidade. Ideais para treinos
+     e jogos recreativos, proporcionando um desempenho consistente.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    Padrão (único)
+</p>
+<h3>
+    Raquete de Tênis "Pro Spin Series"
+</h3>
+<img src = '/imgs/raqueteTenis.jfif' alt = "Erro ao exibir a raquete de tênis"
+<h4>
+    Preço:
+</h4>
+<p>
+    R$599,90
+</p>
+
 </body>
 
 </html>
