--- a/esporte/outro01/index.html
+++ b/esporte/outro01/index.html
@@ -42,12 +42,48 @@
 <h3>
     Raquete de Tênis "Pro Spin Series"
 </h3>
-<img src = '/imgs/raqueteTenis.jfif' alt = "Erro ao exibir a raquete de tênis"
+<img src = '/imgs/raqueteTenis.jfif' alt = "Erro ao exibir a raquete de tênis"/>
 <h4>
     Preço:
 </h4>
 <p>
     R$599,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Raquete de tênis com tecnologia avançada para maior potência e controle de spin. Leve e 
+    equilibrada, reduz a vibração e aumenta a precisão dos golpes.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    L2, L3, L4 (referentes ao tamanho do grip)
+</p>
+<h3>
+    Faixa de Tênis "SweatStop Headband"
+</h3>
+<img src = '/imgs/faixaTenis.jfif' alt = "Erro ao exibir a faixa de tênis"/>
+<h4>
+    Preço:
+</h4>
+<p>
+    R$39,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Faixa de tênis absorvente, feita para manter o suor longe dos olhos durante o jogo. 
+    Confortável e elástica, garante foco total na partida.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    Tamanho único
 </p>
 
 </body>
