--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -89,6 +89,19 @@
     P, M, G, GG
 </p>
 
+<h2>
+    Sobre o basquete
+</h2>
+<p>
+    O futebol, conhecido como "o esporte mais popular do mundo", tem suas raízes modernas na 
+    Inglaterra do século XIX, embora jogos de bola semelhantes existam há milênios em diversas
+    culturas. A padronização das regras e a fundação da Football Association em 1863 foram
+    cruciais para sua disseminação global. O esporte se destaca pela simplicidade de seus
+    fundamentos – chutar uma bola para o gol <h5>teste</h5>adversário – mas pela complexidade tática e
+    técnica que se desenvolveu ao longo do tempo.
+</p>
+
+
 </body>
 
 </html>
