--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -92,15 +92,43 @@
 <h2>
     Sobre o basquete
 </h2>
+<h4>
+    Resumo:
+</h4>
 <p>
-    O futebol, conhecido como "o esporte mais popular do mundo", tem suas raízes modernas na 
-    Inglaterra do século XIX, embora jogos de bola semelhantes existam há milênios em diversas
-    culturas. A padronização das regras e a fundação da Football Association em 1863 foram
-    cruciais para sua disseminação global. O esporte se destaca pela simplicidade de seus
-    fundamentos – chutar uma bola para o gol <h5>teste</h5>adversário – mas pela complexidade tática e
-    técnica que se desenvolveu ao longo do tempo.
+    O basquete foi inventado em 1891 por James Naismith, um professor de educação física
+     canadense, em Springfield, Massachusetts (EUA). A ideia era criar um esporte menos violento
+      que o futebol americano e que pudesse ser praticado em locais fechados durante o inverno.
+       Naismith utilizou cestas de pêssego como "cestas" e um futebol como "bola", e as 13
+        regras originais deram origem a um dos esportes mais dinâmicos e populares do mundo.
 </p>
-
+<h4>
+    Atletas icônicos:
+</h4>
+<p>
+    Nomes como Michael Jordan (EUA), amplamente considerado o maior jogador de basquete
+     de todos os tempos, pela sua habilidade incomparável e competitividade; Magic Johnson
+      (EUA), mestre das assistências e da visão de jogo; Kareem Abdul-Jabbar (EUA), com seu
+       famoso "gancho"; e mais recentemente, LeBron James (EUA) e Stephen Curry (EUA), que
+        redefiniram o jogo.
+</p>
+<h4>
+    Campeonatos principais:
+</h4>
+<p>
+    A principal liga de basquete profissional do mundo é a NBA
+     (National Basketball Association) nos Estados Unidos e Canadá, conhecida por seus atletas
+      de elite e jogos espetaculares. Em nível internacional, os Jogos Olímpicos e a Copa do
+       Mundo de Basquete da FIBA são os grandes palcos para as seleções nacionais.
+</p>
+<img src = '/imgs/Basquete.jpg' alt = "Erro ao exibir imagem de basquete"/>
+<h4>
+    Saiba mais:
+</h4>
+<p>
+    <a href="https://www.google.com/search?q=https://brasilescola.uol.com.br/educacao
+    -fisica/futebol-2.htm">Clique aqui</a>
+</p>
 
 </body>
 
