--- a/esporte/basquete/index.html
+++ b/esporte/basquete/index.html
@@ -122,12 +122,10 @@
        Mundo de Basquete da FIBA são os grandes palcos para as seleções nacionais.
 </p>
 <img src = '/imgs/Basquete.jpg' alt = "Erro ao exibir imagem de basquete"/>
-<h4>
-    Saiba mais:
-</h4>
+
 <p>
     <a href="https://www.google.com/search?q=https://brasilescola.uol.com.br/educacao
-    -fisica/futebol-2.htm">Clique aqui</a>
+    -fisica/futebol-2.htm">Saiba mais</a>
 </p>
 
 </body>
