--- a/esporte/outro01/index.html
+++ b/esporte/outro01/index.html
@@ -86,6 +86,34 @@
     Tamanho único
 </p>
 
+<h2>
+    Sobre o tênis
+</h2>
+<h4>
+    Resumo:
+</h4>
+<p>
+    O tênis moderno começou a se desenvolver no final do século XIX na Inglaterra. O esporte
+     combina força física, agilidade, estratégia e precisão.
+</p>
+<h4>
+    Atletas icônicos:
+</h4>
+<p>
+    Roger Federer (Suíça), Rafael Nadal (Espanha), Novak Djokovic (Sérvia), Serena Williams
+     (EUA) e Steffi Graf (Alemanha).
+</p>
+<h4>
+    Campeonatos principais:
+</h4>
+<p>
+    Os quatro Grand Slams: Australian Open, Roland Garros, Wimbledon e US Open.
+</p>
+
+<p>
+    <a href="https://www.cob.org.br/time-brasil/esportes/1-tenis">Saiba mais</a>
+</p>
+
 </body>
 
 </html>
