--- a/esporte/outro02/index.html
+++ b/esporte/outro02/index.html
@@ -13,7 +13,112 @@
 <a href='/esporte/basquete/index.html'>Basquete</a>
 <a href='/esporte/outro01/index.html'>Tênis</a>
 
+<h2>
+    Nossos produtos:
+</h2>
 
+<h3>
+    Bola de Futebol "Esportes do Boti Pro"
+</h3>
+<img src = '/imgs/bolaFutebolProduto.jfif' alt = "  Erro ao carregar a bola de futebol"/>
+<h4>
+    Preço:
+</h4>
+<p>
+    R$129,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+     Bola de futebol de alta performance, ideal para jogos em campo e treinos intensos. 
+     Fabricada com material sintético durável e costura reforçada para maior precisão e 
+     controle.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    Tamanho 5 (padrão adulto)
+</p>
+<h3>
+    Chuteira "Agility Speed X"
+</h3>
+<img src = '/imgs/chuteiraFutebol.jfif' alt = "Erro ao exibir a chuteira de futebol"/>
+<h4>
+    Preço:
+</h4>
+<p>
+    R$349,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Chuteira leve e flexível, projetada para velocidade e agilidade. Oferece excelente
+     tração em gramados naturais, com cabedal que se ajusta ao pé para um toque preciso na bola.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    37 ao 44
+</p>
+<h3>
+    Caneleira "Shield Pro Impact"
+</h3>
+<img src = '/imgs/caneleiraFutebol.jfif' alt = "Erro ao exibir caneleira de futebol"/>
+<h4>
+    Preço:
+</h4>
+<p>
+    79,90
+</p>
+<h4>
+    Descrição:
+</h4>
+<p>
+    Caneleira resistente e confortável, com proteção de alto impacto e ajuste ergonômico.
+     Essencial para a segurança durante as partidas, minimizando o risco de lesões.
+</p>
+<h4>
+    Tamanhos disponíveis:
+</h4>
+<p>
+    P, M, G
+</p>
+
+<h2>
+    Sobre o futebol
+</h2>
+<h4>
+    Resumo:
+</h4>
+<p>
+    O futebol, conhecido como "o esporte mais popular do mundo", tem suas raízes modernas na
+     Inglaterra do século XIX. A padronização das regras e a fundação da Football Association
+      em 1863 foram cruciais para sua disseminação global. O esporte se destaca pela
+       simplicidade de seus fundamentos, mas pela complexidade tática e técnica que se
+        desenvolveu ao longo do tempo.
+</p>
+<h4>
+    Atletas icônicos:
+</h4>
+<p>
+    A história do futebol é rica em lendas como Pelé (Brasil), Diego Maradona (Argentina),
+     Johan Cruyff (Holanda), Lionel Messi (Argentina) e Cristiano Ronaldo (Portugal).
+</p>
+<h4>
+    Campeonatos principais:
+</h4>
+<p>
+    A Copa do Mundo da FIFA é o auge do futebol de seleções. Em nível de clubes, a UEFA
+     Champions League (Europa) é o torneio mais prestigiado.
+</p>
+<p>
+    <a href="https://www.google.com/search?q=https://brasilescola.uol.com.br/educacao-fisica/
+    futebol-2.htm">Saiba mais</a>
+</p>
 
 </body>
 
