--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang=" "pt-BR">
+<html lang=" "pt-BR>
 
 <head>
 
@@ -7,7 +7,7 @@
 
 <body>
 
-<img src= '/imgs/Logo.jfif' alt= "Erro ao carregar a Logo da loja"/>
+<img src= '/imgs/Logo.jfif' widht = '75' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
 <a href ='/esporte/outro01/index.html'>Tênis</a>
