--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 <h1>Esportes do Boti</h1>
 <h5>Menu</h5>
 <a href ='/esporte/outro01/index.html'>Tênis</a>
-<a href ='/esporte/outro02/index.html'>Futebol</a>
-<a href = '/esporte/basquete/index.html'>Basquete</a>
+<br> <a href ='/esporte/outro02/index.html'>Futebol</a>
+<br> <a href = '/esporte/basquete/index.html'>Basquete</a>
 
 <a href = '/esporte/basquete/index.html'><img src = '/imgs/bolaBasquete.jfif' alt="Imagem de basquete"/></a>
 <a href = '/esporte/outro01/index.html'><img src = '/imgs/bolaTenis.jfif' alt="Imagem de tênis"/></a>
