--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
 
 <body>
 
-<img src= '/imgs/Logo.jfif' widht = '1000' height = '700' alt= "Erro ao carregar a Logo da loja"/>
+<img src= '/imgs/Logo.jfif' widht = '600' height = '900' alt= "Erro ao carregar a Logo da loja"/>
 <h1>Esportes do Boti</h1>
-<h5>Menu</h5>
+<h4>Menu</h4>
 <a href ='/esporte/outro01/index.html'>Tênis</a>
 <br> <a href ='/esporte/outro02/index.html'>Futebol</a>
-<br> <a href = '/esporte/basquete/index.html'>Basquete</a>
+<br> <a href = '/esporte/basquete/index.html'>Basquete</a><br>
 
-<a href = '/esporte/basquete/index.html'><img src = '/imgs/bolaBasquete.jfif' alt="Imagem de basquete"/></a>
-<a href = '/esporte/outro01/index.html'><img src = '/imgs/bolaTenis.jfif' alt="Imagem de tênis"/></a>
-<a href = '/esporte/outro02/index.html'><img src = '/imgs/bolaFutebol.jfif' alt="Imagem de futebol"/></a>
+<br><a href = '/esporte/basquete/index.html'><img src = '/imgs/bolaBasquete.jfif' widht = '300' height = '300' alt="Imagem de basquete"/></a>
+<a href = '/esporte/outro01/index.html'><img src = '/imgs/bolaTenis.jfif' widht = '300' height = '300' alt="Imagem de tênis"/></a>
+<a href = '/esporte/outro02/index.html'><img src = '/imgs/bolaFutebol.jfif' widht = '300' height = '300' alt="Imagem de futebol"/></a>
 
 <h4>
     Descrição de produtos:
@@ -42,13 +42,13 @@
 <h4>
     Conheça nossa loja física:
 </h4>
-<img src = '/imgs/fachadaLoja.jfif' alt="Erro ao carregar imagem da loja"/>
+<img src = '/imgs/fachadaLoja.jfif' widht = '600' height = '600' alt="Erro ao carregar imagem da loja"/>
 
 
 
 <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d479.00157990530056!2d-42.29903386576189!3d-16.168298538593017!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1spt-BR!2sbr!4v1749583132066!5m2!1spt-BR!2sbr" 
-width="600" 
-height="450" 
+width="500" 
+height="375" 
 style="border: 2px black;" 
 allowfullscreen="" 
 loading="lazy" 
